// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CRLF.php 1`] = `
<?php
$test = 1;

class Foo
{
    /**
     * Comment indented with tabs in file with utf-8[dos]
     */
    private $foo;
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
$test = 1;

class Foo
{
    /**
     * Comment indented with tabs in file with utf-8[dos]
     */
    private $foo;
}

`;

exports[`LF.php 1`] = `
<?php
$test = 1;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
$test = 1;

`;

exports[`file-terminated-with-multiple-LF.php 1`] = `
<?php
$test = 1;


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
$test = 1;

`;

exports[`file-terminated-without-line-ending.php 1`] = `
<?php
$test = 1;~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
$test = 1;

`;
